Use new immutable collections for generated endpoint uri factories