@@ -17,23 +17,11 @@ public class AtlasMapEndpointUriFactory extends org.apache.camel.support.compone
 
     private static final String BASE = ":resourceUri";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(8);
-        props.add("allowContextMapAll");
-        props.add("contentCache");
-        props.add("forceReload");
-        props.add("lazyStartProducer");
-        props.add("resourceUri");
-        props.add("sourceMapName");
-        props.add("targetMapMode");
-        props.add("targetMapName");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        SECRET_PROPERTY_NAMES = Collections.emptySet();
-        MULTI_VALUE_PREFIXES = Collections.emptySet();
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "allowContextMapAll", "contentCache", "forceReload", "lazyStartProducer", "resourceUri", "sourceMapName",
+            "targetMapMode", "targetMapName");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of();
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of();
 
     @Override
     public boolean isEnabled(String scheme) {
