@@ -17,52 +17,17 @@ public class QueueEndpointUriFactory extends org.apache.camel.support.component.
 
     private static final String BASE = ":accountName/queueName";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(33);
-        props.add("accessKey");
-        props.add("accountName");
-        props.add("backoffErrorThreshold");
-        props.add("backoffIdleThreshold");
-        props.add("backoffMultiplier");
-        props.add("bridgeErrorHandler");
-        props.add("createQueue");
-        props.add("credentials");
-        props.add("delay");
-        props.add("exceptionHandler");
-        props.add("exchangePattern");
-        props.add("greedy");
-        props.add("initialDelay");
-        props.add("lazyStartProducer");
-        props.add("maxMessages");
-        props.add("messageId");
-        props.add("operation");
-        props.add("pollStrategy");
-        props.add("popReceipt");
-        props.add("queueName");
-        props.add("repeatCount");
-        props.add("runLoggingLevel");
-        props.add("scheduledExecutorService");
-        props.add("scheduler");
-        props.add("schedulerProperties");
-        props.add("sendEmptyMessageWhenIdle");
-        props.add("serviceClient");
-        props.add("startScheduler");
-        props.add("timeToLive");
-        props.add("timeUnit");
-        props.add("timeout");
-        props.add("useFixedDelay");
-        props.add("visibilityTimeout");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        Set<String> secretProps = new HashSet<>(1);
-        secretProps.add("accessKey");
-        SECRET_PROPERTY_NAMES = Collections.unmodifiableSet(secretProps);
-        Set<String> prefixes = new HashSet<>(1);
-        prefixes.add("scheduler.");
-        MULTI_VALUE_PREFIXES = Collections.unmodifiableSet(prefixes);
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "accessKey", "accountName", "backoffErrorThreshold", "backoffIdleThreshold", "backoffMultiplier",
+            "bridgeErrorHandler", "createQueue", "credentials", "delay", "exceptionHandler", "exchangePattern", "greedy",
+            "initialDelay", "lazyStartProducer", "maxMessages", "messageId", "operation", "pollStrategy", "popReceipt",
+            "queueName", "repeatCount", "runLoggingLevel", "scheduledExecutorService", "scheduler", "schedulerProperties",
+            "sendEmptyMessageWhenIdle", "serviceClient", "startScheduler", "timeToLive", "timeUnit", "timeout",
+            "useFixedDelay", "visibilityTimeout");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of(
+            "accessKey");
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of(
+            "scheduler.");
 
     @Override
     public boolean isEnabled(String scheme) {
