@@ -17,68 +17,19 @@ public class CouchbaseEndpointUriFactory extends org.apache.camel.support.compon
 
     private static final String BASE = ":protocol://hostname:port";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(48);
-        props.add("additionalHosts");
-        props.add("autoStartIdForInserts");
-        props.add("backoffErrorThreshold");
-        props.add("backoffIdleThreshold");
-        props.add("backoffMultiplier");
-        props.add("bridgeErrorHandler");
-        props.add("bucket");
-        props.add("collection");
-        props.add("connectTimeout");
-        props.add("consumerProcessedStrategy");
-        props.add("delay");
-        props.add("descending");
-        props.add("designDocumentName");
-        props.add("exceptionHandler");
-        props.add("exchangePattern");
-        props.add("fullDocument");
-        props.add("greedy");
-        props.add("hostname");
-        props.add("initialDelay");
-        props.add("key");
-        props.add("lazyStartProducer");
-        props.add("limit");
-        props.add("operation");
-        props.add("password");
-        props.add("persistTo");
-        props.add("pollStrategy");
-        props.add("port");
-        props.add("producerRetryAttempts");
-        props.add("producerRetryPause");
-        props.add("protocol");
-        props.add("queryTimeout");
-        props.add("rangeEndKey");
-        props.add("rangeStartKey");
-        props.add("repeatCount");
-        props.add("replicateTo");
-        props.add("runLoggingLevel");
-        props.add("scheduledExecutorService");
-        props.add("scheduler");
-        props.add("schedulerProperties");
-        props.add("scope");
-        props.add("sendEmptyMessageWhenIdle");
-        props.add("skip");
-        props.add("startScheduler");
-        props.add("startingIdForInsertsFrom");
-        props.add("timeUnit");
-        props.add("useFixedDelay");
-        props.add("username");
-        props.add("viewName");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        Set<String> secretProps = new HashSet<>(2);
-        secretProps.add("password");
-        secretProps.add("username");
-        SECRET_PROPERTY_NAMES = Collections.unmodifiableSet(secretProps);
-        Set<String> prefixes = new HashSet<>(1);
-        prefixes.add("scheduler.");
-        MULTI_VALUE_PREFIXES = Collections.unmodifiableSet(prefixes);
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "additionalHosts", "autoStartIdForInserts", "backoffErrorThreshold", "backoffIdleThreshold",
+            "backoffMultiplier", "bridgeErrorHandler", "bucket", "collection", "connectTimeout",
+            "consumerProcessedStrategy", "delay", "descending", "designDocumentName", "exceptionHandler",
+            "exchangePattern", "fullDocument", "greedy", "hostname", "initialDelay", "key", "lazyStartProducer", "limit",
+            "operation", "password", "persistTo", "pollStrategy", "port", "producerRetryAttempts", "producerRetryPause",
+            "protocol", "queryTimeout", "rangeEndKey", "rangeStartKey", "repeatCount", "replicateTo", "runLoggingLevel",
+            "scheduledExecutorService", "scheduler", "schedulerProperties", "scope", "sendEmptyMessageWhenIdle", "skip",
+            "startScheduler", "startingIdForInsertsFrom", "timeUnit", "useFixedDelay", "username", "viewName");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of(
+            "password", "username");
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of(
+            "scheduler.");
 
     @Override
     public boolean isEnabled(String scheme) {
