@@ -17,112 +17,31 @@ public class DebeziumPostgresEndpointUriFactory extends org.apache.camel.support
 
     private static final String BASE = ":name";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(95);
-        props.add("additionalProperties");
-        props.add("binaryHandlingMode");
-        props.add("bridgeErrorHandler");
-        props.add("columnBlacklist");
-        props.add("columnExcludeList");
-        props.add("columnIncludeList");
-        props.add("columnPropagateSourceType");
-        props.add("columnWhitelist");
-        props.add("converters");
-        props.add("databaseDbname");
-        props.add("databaseHistoryFileFilename");
-        props.add("databaseHostname");
-        props.add("databaseInitialStatements");
-        props.add("databasePassword");
-        props.add("databasePort");
-        props.add("databaseServerName");
-        props.add("databaseSslcert");
-        props.add("databaseSslfactory");
-        props.add("databaseSslkey");
-        props.add("databaseSslmode");
-        props.add("databaseSslpassword");
-        props.add("databaseSslrootcert");
-        props.add("databaseTcpkeepalive");
-        props.add("databaseUser");
-        props.add("datatypePropagateSourceType");
-        props.add("decimalHandlingMode");
-        props.add("eventProcessingFailureHandlingMode");
-        props.add("exceptionHandler");
-        props.add("exchangePattern");
-        props.add("heartbeatActionQuery");
-        props.add("heartbeatIntervalMs");
-        props.add("heartbeatTopicsPrefix");
-        props.add("hstoreHandlingMode");
-        props.add("includeSchemaComments");
-        props.add("includeUnknownDatatypes");
-        props.add("incrementalSnapshotChunkSize");
-        props.add("internalKeyConverter");
-        props.add("internalValueConverter");
-        props.add("intervalHandlingMode");
-        props.add("maxBatchSize");
-        props.add("maxQueueSize");
-        props.add("maxQueueSizeInBytes");
-        props.add("messageKeyColumns");
-        props.add("messagePrefixExcludeList");
-        props.add("messagePrefixIncludeList");
-        props.add("name");
-        props.add("offsetCommitPolicy");
-        props.add("offsetCommitTimeoutMs");
-        props.add("offsetFlushIntervalMs");
-        props.add("offsetStorage");
-        props.add("offsetStorageFileName");
-        props.add("offsetStoragePartitions");
-        props.add("offsetStorageReplicationFactor");
-        props.add("offsetStorageTopic");
-        props.add("pluginName");
-        props.add("pollIntervalMs");
-        props.add("provideTransactionMetadata");
-        props.add("publicationAutocreateMode");
-        props.add("publicationName");
-        props.add("queryFetchSize");
-        props.add("retriableRestartConnectorWaitMs");
-        props.add("sanitizeFieldNames");
-        props.add("schemaBlacklist");
-        props.add("schemaExcludeList");
-        props.add("schemaIncludeList");
-        props.add("schemaNameAdjustmentMode");
-        props.add("schemaRefreshMode");
-        props.add("schemaWhitelist");
-        props.add("signalDataCollection");
-        props.add("skippedOperations");
-        props.add("slotDropOnStop");
-        props.add("slotMaxRetries");
-        props.add("slotName");
-        props.add("slotRetryDelayMs");
-        props.add("slotStreamParams");
-        props.add("snapshotCustomClass");
-        props.add("snapshotDelayMs");
-        props.add("snapshotFetchSize");
-        props.add("snapshotIncludeCollectionList");
-        props.add("snapshotLockTimeoutMs");
-        props.add("snapshotMaxThreads");
-        props.add("snapshotMode");
-        props.add("snapshotSelectStatementOverrides");
-        props.add("sourceStructVersion");
-        props.add("statusUpdateIntervalMs");
-        props.add("tableBlacklist");
-        props.add("tableExcludeList");
-        props.add("tableIgnoreBuiltin");
-        props.add("tableIncludeList");
-        props.add("tableWhitelist");
-        props.add("timePrecisionMode");
-        props.add("tombstonesOnDelete");
-        props.add("transactionTopic");
-        props.add("unavailableValuePlaceholder");
-        props.add("xminFetchIntervalMs");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        SECRET_PROPERTY_NAMES = Collections.emptySet();
-        Set<String> prefixes = new HashSet<>(1);
-        prefixes.add("additionalProperties.");
-        MULTI_VALUE_PREFIXES = Collections.unmodifiableSet(prefixes);
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "additionalProperties", "binaryHandlingMode", "bridgeErrorHandler", "columnBlacklist", "columnExcludeList",
+            "columnIncludeList", "columnPropagateSourceType", "columnWhitelist", "converters", "databaseDbname",
+            "databaseHistoryFileFilename", "databaseHostname", "databaseInitialStatements", "databasePassword",
+            "databasePort", "databaseServerName", "databaseSslcert", "databaseSslfactory", "databaseSslkey",
+            "databaseSslmode", "databaseSslpassword", "databaseSslrootcert", "databaseTcpkeepalive", "databaseUser",
+            "datatypePropagateSourceType", "decimalHandlingMode", "eventProcessingFailureHandlingMode", "exceptionHandler",
+            "exchangePattern", "heartbeatActionQuery", "heartbeatIntervalMs", "heartbeatTopicsPrefix",
+            "hstoreHandlingMode", "includeSchemaComments", "includeUnknownDatatypes", "incrementalSnapshotChunkSize",
+            "internalKeyConverter", "internalValueConverter", "intervalHandlingMode", "maxBatchSize", "maxQueueSize",
+            "maxQueueSizeInBytes", "messageKeyColumns", "messagePrefixExcludeList", "messagePrefixIncludeList", "name",
+            "offsetCommitPolicy", "offsetCommitTimeoutMs", "offsetFlushIntervalMs", "offsetStorage",
+            "offsetStorageFileName", "offsetStoragePartitions", "offsetStorageReplicationFactor", "offsetStorageTopic",
+            "pluginName", "pollIntervalMs", "provideTransactionMetadata", "publicationAutocreateMode", "publicationName",
+            "queryFetchSize", "retriableRestartConnectorWaitMs", "sanitizeFieldNames", "schemaBlacklist",
+            "schemaExcludeList", "schemaIncludeList", "schemaNameAdjustmentMode", "schemaRefreshMode", "schemaWhitelist",
+            "signalDataCollection", "skippedOperations", "slotDropOnStop", "slotMaxRetries", "slotName",
+            "slotRetryDelayMs", "slotStreamParams", "snapshotCustomClass", "snapshotDelayMs", "snapshotFetchSize",
+            "snapshotIncludeCollectionList", "snapshotLockTimeoutMs", "snapshotMaxThreads", "snapshotMode",
+            "snapshotSelectStatementOverrides", "sourceStructVersion", "statusUpdateIntervalMs", "tableBlacklist",
+            "tableExcludeList", "tableIgnoreBuiltin", "tableIncludeList", "tableWhitelist", "timePrecisionMode",
+            "tombstonesOnDelete", "transactionTopic", "unavailableValuePlaceholder", "xminFetchIntervalMs");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of();
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of(
+            "additionalProperties.");
 
     @Override
     public boolean isEnabled(String scheme) {
