@@ -17,20 +17,10 @@ public class GoogleBigQuerySQLEndpointUriFactory extends org.apache.camel.suppor
 
     private static final String BASE = ":projectId:queryString";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(5);
-        props.add("connectionFactory");
-        props.add("lazyStartProducer");
-        props.add("projectId");
-        props.add("queryString");
-        props.add("serviceAccountKey");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        SECRET_PROPERTY_NAMES = Collections.emptySet();
-        MULTI_VALUE_PREFIXES = Collections.emptySet();
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "connectionFactory", "lazyStartProducer", "projectId", "queryString", "serviceAccountKey");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of();
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of();
 
     @Override
     public boolean isEnabled(String scheme) {
