@@ -17,53 +17,17 @@ public class GoogleMailStreamEndpointUriFactory extends org.apache.camel.support
 
     private static final String BASE = ":index";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(32);
-        props.add("accessToken");
-        props.add("applicationName");
-        props.add("backoffErrorThreshold");
-        props.add("backoffIdleThreshold");
-        props.add("backoffMultiplier");
-        props.add("bridgeErrorHandler");
-        props.add("clientId");
-        props.add("clientSecret");
-        props.add("delay");
-        props.add("delegate");
-        props.add("exceptionHandler");
-        props.add("exchangePattern");
-        props.add("greedy");
-        props.add("index");
-        props.add("initialDelay");
-        props.add("labels");
-        props.add("markAsRead");
-        props.add("maxResults");
-        props.add("pollStrategy");
-        props.add("query");
-        props.add("refreshToken");
-        props.add("repeatCount");
-        props.add("runLoggingLevel");
-        props.add("scheduledExecutorService");
-        props.add("scheduler");
-        props.add("schedulerProperties");
-        props.add("scopes");
-        props.add("sendEmptyMessageWhenIdle");
-        props.add("serviceAccountKey");
-        props.add("startScheduler");
-        props.add("timeUnit");
-        props.add("useFixedDelay");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        Set<String> secretProps = new HashSet<>(3);
-        secretProps.add("accessToken");
-        secretProps.add("clientSecret");
-        secretProps.add("refreshToken");
-        SECRET_PROPERTY_NAMES = Collections.unmodifiableSet(secretProps);
-        Set<String> prefixes = new HashSet<>(1);
-        prefixes.add("scheduler.");
-        MULTI_VALUE_PREFIXES = Collections.unmodifiableSet(prefixes);
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "accessToken", "applicationName", "backoffErrorThreshold", "backoffIdleThreshold", "backoffMultiplier",
+            "bridgeErrorHandler", "clientId", "clientSecret", "delay", "delegate", "exceptionHandler", "exchangePattern",
+            "greedy", "index", "initialDelay", "labels", "markAsRead", "maxResults", "pollStrategy", "query",
+            "refreshToken", "repeatCount", "runLoggingLevel", "scheduledExecutorService", "scheduler",
+            "schedulerProperties", "scopes", "sendEmptyMessageWhenIdle", "serviceAccountKey", "startScheduler", "timeUnit",
+            "useFixedDelay");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of(
+            "accessToken", "clientSecret", "refreshToken");
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of(
+            "scheduler.");
 
     @Override
     public boolean isEnabled(String scheme) {
