@@ -17,28 +17,12 @@ public class HazelcastSedaEndpointUriFactory extends org.apache.camel.support.co
 
     private static final String BASE = ":cacheName";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(13);
-        props.add("bridgeErrorHandler");
-        props.add("cacheName");
-        props.add("concurrentConsumers");
-        props.add("defaultOperation");
-        props.add("exceptionHandler");
-        props.add("exchangePattern");
-        props.add("hazelcastInstance");
-        props.add("hazelcastInstanceName");
-        props.add("lazyStartProducer");
-        props.add("onErrorDelay");
-        props.add("pollTimeout");
-        props.add("transacted");
-        props.add("transferExchange");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        SECRET_PROPERTY_NAMES = Collections.emptySet();
-        MULTI_VALUE_PREFIXES = Collections.emptySet();
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "bridgeErrorHandler", "cacheName", "concurrentConsumers", "defaultOperation", "exceptionHandler",
+            "exchangePattern", "hazelcastInstance", "hazelcastInstanceName", "lazyStartProducer", "onErrorDelay",
+            "pollTimeout", "transacted", "transferExchange");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of();
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of();
 
     @Override
     public boolean isEnabled(String scheme) {
