@@ -17,25 +17,11 @@ public class OptaPlannerEndpointUriFactory extends org.apache.camel.support.comp
 
     private static final String BASE = ":configFile";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(10);
-        props.add("async");
-        props.add("bridgeErrorHandler");
-        props.add("configFile");
-        props.add("exceptionHandler");
-        props.add("exchangePattern");
-        props.add("lazyStartProducer");
-        props.add("problemId");
-        props.add("solverId");
-        props.add("threadPoolSize");
-        props.add("useSolverManager");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        SECRET_PROPERTY_NAMES = Collections.emptySet();
-        MULTI_VALUE_PREFIXES = Collections.emptySet();
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "async", "bridgeErrorHandler", "configFile", "exceptionHandler", "exchangePattern", "lazyStartProducer",
+            "problemId", "solverId", "threadPoolSize", "useSolverManager");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of();
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of();
 
     @Override
     public boolean isEnabled(String scheme) {
