@@ -17,34 +17,12 @@ public class RestEndpointUriFactory extends org.apache.camel.support.component.E
 
     private static final String BASE = ":method:path:uriTemplate";
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(19);
-        props.add("apiDoc");
-        props.add("bindingMode");
-        props.add("bridgeErrorHandler");
-        props.add("consumerComponentName");
-        props.add("consumes");
-        props.add("description");
-        props.add("exceptionHandler");
-        props.add("exchangePattern");
-        props.add("host");
-        props.add("inType");
-        props.add("lazyStartProducer");
-        props.add("method");
-        props.add("outType");
-        props.add("path");
-        props.add("producerComponentName");
-        props.add("produces");
-        props.add("queryParameters");
-        props.add("routeId");
-        props.add("uriTemplate");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        SECRET_PROPERTY_NAMES = Collections.emptySet();
-        MULTI_VALUE_PREFIXES = Collections.emptySet();
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "apiDoc", "bindingMode", "bridgeErrorHandler", "consumerComponentName", "consumes", "description",
+            "exceptionHandler", "exchangePattern", "host", "inType", "lazyStartProducer", "method", "outType", "path",
+            "producerComponentName", "produces", "queryParameters", "routeId", "uriTemplate");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of();
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of();
 
     @Override
     public boolean isEnabled(String scheme) {
