@@ -18,61 +18,18 @@ public class SmppEndpointUriFactory extends org.apache.camel.support.component.E
     private static final String BASE = ":host:port";
     private static final String[] SCHEMES = new String[]{"smpp", "smpps"};
 
-    private static final Set<String> PROPERTY_NAMES;
-    private static final Set<String> SECRET_PROPERTY_NAMES;
-    private static final Set<String> MULTI_VALUE_PREFIXES;
-    static {
-        Set<String> props = new HashSet<>(43);
-        props.add("addressRange");
-        props.add("alphabet");
-        props.add("bridgeErrorHandler");
-        props.add("dataCoding");
-        props.add("destAddr");
-        props.add("destAddrNpi");
-        props.add("destAddrTon");
-        props.add("encoding");
-        props.add("enquireLinkTimer");
-        props.add("exceptionHandler");
-        props.add("exchangePattern");
-        props.add("host");
-        props.add("httpProxyHost");
-        props.add("httpProxyPassword");
-        props.add("httpProxyPort");
-        props.add("httpProxyUsername");
-        props.add("initialReconnectDelay");
-        props.add("lazySessionCreation");
-        props.add("lazyStartProducer");
-        props.add("maxReconnect");
-        props.add("numberingPlanIndicator");
-        props.add("password");
-        props.add("pduProcessorDegree");
-        props.add("pduProcessorQueueCapacity");
-        props.add("port");
-        props.add("priorityFlag");
-        props.add("protocolId");
-        props.add("proxyHeaders");
-        props.add("reconnectDelay");
-        props.add("registeredDelivery");
-        props.add("replaceIfPresentFlag");
-        props.add("serviceType");
-        props.add("sessionStateListener");
-        props.add("singleDLR");
-        props.add("sourceAddr");
-        props.add("sourceAddrNpi");
-        props.add("sourceAddrTon");
-        props.add("splittingPolicy");
-        props.add("systemId");
-        props.add("systemType");
-        props.add("transactionTimer");
-        props.add("typeOfNumber");
-        props.add("usingSSL");
-        PROPERTY_NAMES = Collections.unmodifiableSet(props);
-        Set<String> secretProps = new HashSet<>(2);
-        secretProps.add("password");
-        secretProps.add("systemId");
-        SECRET_PROPERTY_NAMES = Collections.unmodifiableSet(secretProps);
-        MULTI_VALUE_PREFIXES = Collections.emptySet();
-    }
+    private static final Set<String> PROPERTY_NAMES = Set.of(
+            "addressRange", "alphabet", "bridgeErrorHandler", "dataCoding", "destAddr", "destAddrNpi", "destAddrTon",
+            "encoding", "enquireLinkTimer", "exceptionHandler", "exchangePattern", "host", "httpProxyHost",
+            "httpProxyPassword", "httpProxyPort", "httpProxyUsername", "initialReconnectDelay", "lazySessionCreation",
+            "lazyStartProducer", "maxReconnect", "numberingPlanIndicator", "password", "pduProcessorDegree",
+            "pduProcessorQueueCapacity", "port", "priorityFlag", "protocolId", "proxyHeaders", "reconnectDelay",
+            "registeredDelivery", "replaceIfPresentFlag", "serviceType", "sessionStateListener", "singleDLR", "sourceAddr",
+            "sourceAddrNpi", "sourceAddrTon", "splittingPolicy", "systemId", "systemType", "transactionTimer",
+            "typeOfNumber", "usingSSL");
+    private static final Set<String> SECRET_PROPERTY_NAMES = Set.of(
+            "password", "systemId");
+    private static final Set<String> MULTI_VALUE_PREFIXES = Set.of();
 
     @Override
     public boolean isEnabled(String scheme) {
